# virtual-accelerator-management-soc

./: .gitignore  LICENSE  Makefile  README.md
abi/: vams-v1.json
docs/: architecture.md  command-lifecycle.md  crc32-command-path.md  demo.md  descriptor-format.md  fault-recovery.md  firmware-architecture.md  host-firmware-abi.md  linux-pci-driver.md  linux-uapi.md  management-peripherals.md  mem-copy-command-path.md  mem-fill-command-path.md  minimal-riscv-subsystem.md  nop-command-path.md  pcie-endpoint.md  performance-plan.md  register-map.md  requirements.md  roadmap.md  verification-plan.md  zephyr-board-port.md
firmware/: CMakeLists.txt  Kconfig  prj.conf
firmware/baremetal/: Makefile  linker.ld  main.c  start.S
firmware/boards/vams_riscv/: Kconfig.defconfig  Kconfig.vams_riscv  board.cmake  board.yml  vams_riscv.dts  vams_riscv.yaml  vams_riscv_defconfig
firmware/drivers/: vams_command_portal.c  vams_mailbox.c  vams_management.c
firmware/dts/bindings/: vendor-prefixes.txt
firmware/dts/bindings/mailbox/: vams,mailbox.yaml
firmware/dts/bindings/misc/: vams,command-portal.yaml  vams,management.yaml
firmware/include/: vams_abi.h  vams_command.h  vams_command_portal.h  vams_mailbox.h  vams_management.h  vams_platform.h
firmware/soc/vams_riscv/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
firmware/src/: main.c
firmware/src/command/: vams_command.c
firmware/tests/: watchdog-expiry.conf
include/: vams_abi.h
kernel/: Kconfig  Makefile  vams_abi.h  vams_pci.c  vams_regs.h
scripts/: gen-vams-abi.py  prepare-zephyr.sh
(+27 files in other folders)
